pag1 quase completa

--- a/src/home/index.html
+++ b/src/home/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
         <div class="landpage">
-            <div>
+            <div class="partedecima">
                 <img src="../assets/images/image 1.png" alt="" class="logo">
+                <p class="dress"> Dress Beautiful </p>
                 <button class="login"> Login </button>
                 <button class="adm"> Adm </button>
             </div>
+            <hr class="hr">
             <div>
                 <h1 class="titulo"> Seja bem-vinda, noiva</h1>
-                <p class="paragrafo"> Aqui você encontra o vestido ideal para você </p>
-                <button> Cadastre-se </button>
+                <img src="../assets/images/maq-removebg-preview 1.png" alt="" class="maquina">
+                <img src="../assets/images/tec.jpg" alt="" class="tecido">
+                <p class="paragrafo"> Aqui você encontra o vestido ideal para você. 
+                    Contamos com mais de 200 vestidos, 7 tecidos, 5 tamanhos. Entregamos para todo o Brasil. </p>
+                <img src="../assets/images/image 2.png" alt="" class="noiva">
+                <p class="cadastre"> Cadastre-se </p>
                 <img src="../assets/images/faixa4.png" alt="" class="faixarosa">
             </div>
         </div>
