pag de login quase completa

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -10,21 +10,21 @@
 <body>
         <div class="landpage">
             <div class="partedecima">
-                <img src="../assets/images/image 1.png" alt="" class="logo">
+                <img src="../../assets/images/image 1.png" alt="" class="logo">
                 <p class="dress"> Dress Beautiful </p>
-                <button class="login"> Login </button>
+                <a href="../login/index.html" class="loginn">Login </a>
                 <button class="adm"> Adm </button>
             </div>
             <hr class="hr">
             <div>
                 <h1 class="titulo"> Seja bem-vinda, noiva</h1>
-                <img src="../assets/images/maq-removebg-preview 1.png" alt="" class="maquina">
-                <img src="../assets/images/tec.jpg" alt="" class="tecido">
+                <img src="../../assets/images/maq-removebg-preview 1.png" alt="" class="maquina">
+                <img src="../../assets/images/tec.jpg" alt="" class="tecido">
                 <p class="paragrafo"> Aqui você encontra o vestido ideal para você. 
                     Contamos com mais de 200 vestidos, 7 tecidos, 5 tamanhos. Entregamos para todo o Brasil. </p>
-                <img src="../assets/images/image 2.png" alt="" class="noiva">
+                <img src="../../assets/images/image 2.png" alt="" class="noiva">
                 <p class="cadastre"> Cadastre-se </p>
-                <img src="../assets/images/faixa4.png" alt="" class="faixarosa">
+                <img src="../../assets/images/faixa4.png" alt="" class="faixarosa">
             </div>
         </div>
 </body>
