pagina login completa

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -13,7 +13,7 @@
                 <img src="../../assets/images/image 1.png" alt="" class="logo">
                 <p class="dress"> Dress Beautiful </p>
                 <a href="../login/index.html" class="loginn">Login </a>
-                <button class="adm"> Adm </button>
+                <a href="../loginadm/index.html" class="adm">Adm </a>
             </div>
             <hr class="hr">
             <div>
