--- a/src/pages/loginadm/index.html
+++ b/src/pages/loginadm/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Adm</title>
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
     <div>
         <img src="../../assets/images/image 1.png" alt="" class="logo">
-        <img src="../../assets/Rectangle 23.png" alt="" class="quadrado">
-        <h1 class="h1">Seja bem vinda de volta</h1>
+        <p class="sair">Sair</p>
+        <img src="../../assets/images/Rectangle 25.png" alt="" class="quadrado">
+        <h1 class="h1">Seja bem-vindo(a) de volta</h1>
         <p class="email">
             email: <input type="text">
         </p>
         <p class="senha">
             senha: <input type="text">
         </p>
-        <a href="../meuperfil/index.html" class="botao">Entrar </a>
+        <button class="botao">
+            Entrar
+        </button>
+
+
     </div>
 </body>
 </html>
