página "meu perfil" completa

--- a/src/pages/meuperfil/index.html
+++ b/src/pages/meuperfil/index.html
@@ -9,12 +9,27 @@
 </head>
 <body>
     <div>
-        <img src="../../assets/images/image 1.png" alt="">
-        <p>Vestidos longo</p>
-        <p>Vestidos curtos</p>
-        <p>Estilo praia</p>
-        <p>Meu Perfil</p>
-        <p> Sair</p>
+        <img src="../../assets/images/image 1.png" alt="" class="logo">
+        <p class="longo">Vestidos longo</p>
+        <p class="curtos">Vestidos curtos</p>
+        <p class="praia">Estilo praia</p>
+        <p class="perfil">Meu Perfil</p>
+        <p class="sair"> Sair</p>
+    </div>
+    <div>
+        <img src="../../assets/images/Rectangle 25.png" alt="" class="quadrado">
+    </div>
+    <div>
+        <img src="../../assets/images/Rectangle 22.png" alt="" class="retangulo">
+    </div>
+    <div>
+        <h2 class="oi">Oi, (nome do usuário)</h2>
+        <p class="pedidos">Meus pedidos</p>
+        <img src="../../assets/images/image 17.png" alt="" class="caixa">
+        <img src="../../assets/images/image 18.png" alt="" class="caminhao">
+
+        <p class="processando">Processando</p>
+        <p class="enviado">Enviado</p>
     </div>
 </body>
 </html>
